--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/loans"
+NEXTAUTH_SECRET="your-secret-key-here"
+NEXTAUTH_URL="http://localhost:3000"
